dist/1.0/bin/sample/retrieveUnpackaged/objects/Credit_Checking_History__c.object
<CustomObject>
    <description>Object storing information about requests for external agency</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Related Customer</description>
        <inlineHelpText>Related Customer</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Checking History</relationshipLabel>
        <relationshipName>Credit_Checking_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guid__c</fullName>
        <description>ID of the requested Report</description>
        <inlineHelpText>ID of the requested Report</inlineHelpText>
        <label>Guid</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Opportunity, for which the Report was requested</description>
        <inlineHelpText>Opportunity, for which the Report was requested</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Credit Checking History</relationshipLabel>
        <relationshipName>Credit_Checking_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <description>Profile used within Request</description>
        <inlineHelpText>Profile used within Request</inlineHelpText>
        <label>Profile</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_Status__c</fullName>
        <description>Status received in the Response</description>
        <inlineHelpText>Status received in the Response</inlineHelpText>
        <label>Received Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <description>User, who requested the Report</description>
        <inlineHelpText>User, who requested the Report</inlineHelpText>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Credit_Checking_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_On__c</fullName>
        <description>Date and Time when Report was Requested</description>
        <inlineHelpText>Date and Time when Report was Requested</inlineHelpText>
        <label>Requested On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Response_Received_On__c</fullName>
        <description>Date and Time when response was received</description>
        <inlineHelpText>Date and Time when response was received</inlineHelpText>
        <label>Response Received On</label>
        <type>DateTime</type>
    </fields>
    <label>Credit Checking History</label>
    <nameField>
        <displayFormat>CCH{000000000}</displayFormat>
        <label>Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Checking History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>